--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: My Tech Journey
+author: John Simmons
+email: jsimmons2008@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A place to find the musings of a technologist that wants to rebrand himself.
 
 # social links
 twitter_username: your-twitter-handle
-github_username:  your-github-handle
+github_username:  jsimmons2008
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
