--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,4 @@ github_username:  jsimmons2008
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-midnight
+theme: minima
